--- a/app/src/main/res/layout/activity_retrieve_main.xml
+++ b/app/src/main/res/layout/activity_retrieve_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:xf="http://schemas.android.com/apk/res/com.example.myqr_codescan"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/main_background">
 
     <com.example.assertmanager.view.TopBar
         android:id="@+id/topbar"
@@ -14,19 +15,20 @@
         android:id="@+id/selectionbar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        xf:flag="retrieve"
+        app:flag="retrieve"
         ></com.example.assertmanager.view.SelectionBar>
 
     <RelativeLayout
         android:gravity="center_vertical"
         android:id="@+id/info_rl"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="28dp"
         android:layout_below="@id/selectionbar"
-        android:background="#ccc"
+        android:background="@drawable/check_main_bg"
         >
 
         <TextView
+            android:textColor="@color/white"
             android:gravity="center_vertical"
             android:id="@+id/totol_num"
             android:layout_width="wrap_content"
@@ -35,7 +37,8 @@
             android:textSize="10sp" />
 
         <TextView
-             android:gravity="center_vertical"
+            android:textColor="@color/white"
+            android:gravity="center_vertical"
             android:id="@+id/show_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
